# AISECApp

./: .env.example  .gitignore  README.md  make_pptx.py  pyproject.toml
data/: README.md
data/cases/demo-parse-header/: advisory.txt  manifest.json  patch.diff
data/cases/magma-libpng-png001/: advisory.txt  manifest.json
data/cases/magma-libpng-png002/: advisory.txt  manifest.json  patch.diff
data/cases/magma-libpng-png003/: advisory.txt  manifest.json  patch.diff
data/cases/magma-libpng-png004/: advisory.txt  manifest.json  patch.diff
data/cases/magma-libpng-png005/: advisory.txt  manifest.json  patch.diff
data/cases/magma-libpng-png006/: advisory.txt  manifest.json  patch.diff
data/cases/magma-libpng-png007/: advisory.txt  manifest.json  patch.diff
data/cases/magma-libsndfile-snd001/: advisory.txt  manifest.json  patch.diff
data/cases/magma-libsndfile-snd002/: advisory.txt  manifest.json
data/cases/magma-libsndfile-snd004/: advisory.txt  manifest.json
data/cases/magma-libsndfile-snd005/: advisory.txt  manifest.json  patch.diff
data/cases/magma-libsndfile-snd006/: advisory.txt  manifest.json
data/cases/magma-libsndfile-snd007/: advisory.txt  manifest.json
data/cases/magma-libsndfile-snd010/: advisory.txt  manifest.json
data/cases/magma-libsndfile-snd012/: advisory.txt  manifest.json  patch.diff
data/cases/magma-libsndfile-snd013/: advisory.txt  manifest.json
docs/: Reporter_중간발표.pptx  dataset-acquisition.md  implementation-log.md  implementation.md  project-plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  global.css  types.ts
src/aisec_app/: __init__.py  api.py  cli.py  config.py  dataset.py  evaluation.py  magma_import.py  models.py  pipeline.py  project_store.py  report_export.py  sample_data.py  source_analysis.py  source_cli.py  zip_analysis.py  zip_cli.py
tests/: test_dataset.py  test_evaluation.py  test_pipeline.py  test_report_export.py  test_source_analysis.py  test_zip_analysis.py
(+814 files in other folders)
