[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aisec-app"
version = "0.1.0"
description = "Scaffold for a verified 1-day binary vulnerability detection pipeline"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "AISEC App Team" }
]
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]
llm = [
  "openai>=1.0.0",
]

[project.scripts]
aisec-demo = "aisec_app.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
