[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "aisec-app"
version = "0.1.0"
description = "Scaffold for a verified 1-day binary vulnerability detection pipeline"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "AISEC App Team" }
]
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.115.0",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30.0",
]
llm = [
  "anthropic>=0.40.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
aisec-demo = "aisec_app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aisec_app"]
